feat:added complete crud implementation for adding programme entity

--- a/ACBackendAPI.Application/ACBackendAPI.Application.csproj
+++ b/ACBackendAPI.Application/ACBackendAPI.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ACBackendAPI.Domain\ACBackendAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
