feat:added jwt implementation for authorization and securing my endpoint

--- a/ACBackendAPI.WebApi/appsettings.json
+++ b/ACBackendAPI.WebApi/appsettings.json
@@ -9,5 +9,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=AdamsCollegeDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "JwtSettings": {
+    "Key": "Z6aP3zX7eJ9QbLsM2vT8WcKrD5YxNhF4",
+    "Issuer": "YasirAuthService",
+    "Audience": "YasirAPIClients",
+    "ExpirationInMinutes": 60
   }
 }
