fix:jwt not configured properly

--- a/ACBackendAPI.WebApi/appsettings.json
+++ b/ACBackendAPI.WebApi/appsettings.json
@@ -14,7 +14,7 @@
   "JwtSettings": {
     "Key": "Z6aP3zX7eJ9QbLsM2vT8WcKrD5YxNhF4",
     "Issuer": "YasirAuthService",
-    "Audience": "YasirAPIClients",
+    "Audience": "AdamsAPIClients",
     "ExpirationInMinutes": 60
   }
 }
