feat:contenarize the application

--- a/ACBackendAPI.WebApi/appsettings.json
+++ b/ACBackendAPI.WebApi/appsettings.json
@@ -7,8 +7,12 @@
   },
   "AllowedHosts": "*",
 
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=localhost; Port=5432; Database=AdamsCollegeDB;User Id=postgres;Password=yastec01!"
+  //}, 
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AdamsCollegeDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=dpg-d0b4o93e5dus73fvhg7g-a.oregon-postgres.render.com; Port=5432; Database=adamscollegedb; Username=adams; Password=XrfRucKIRBTXJdkoo7HzQ4hJe0YVYKzq; SSL Mode=Require; Trust Server Certificate=true;"
   },
 
   "JwtSettings": {
