feat:added docker of linux

--- a/ACBackendAPI.WebApi/ACBackendAPI.WebApi.csproj
+++ b/ACBackendAPI.WebApi/ACBackendAPI.WebApi.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>745fa40d-9626-4a48-90c5-389f1a0a5b65</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
