--- a/ACBackendAPI.Application/ACBackendAPI.Application.csproj
+++ b/ACBackendAPI.Application/ACBackendAPI.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="libphonenumber-csharp" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
