--- a/ACBackendAPI.Application/ACBackendAPI.Application.csproj
+++ b/ACBackendAPI.Application/ACBackendAPI.Application.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="libphonenumber-csharp" Version="9.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
