--- a/ACBackendAPI.WebApi/appsettings.json
+++ b/ACBackendAPI.WebApi/appsettings.json
@@ -9,12 +9,11 @@
 
   //"ConnectionStrings": {
   //  "DefaultConnection": "Server=localhost; Port=5432; Database=AdamsCollegeDB;User Id=postgres;Password=yastec01!"
-  //}, 
+  //},
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d0b4o93e5dus73fvhg7g-a.oregon-postgres.render.com; Port=5432; Database=adamscollegedb; Username=adams; Password=XrfRucKIRBTXJdkoo7HzQ4hJe0YVYKzq; SSL Mode=Require; Trust Server Certificate=true;"
+    "DefaultConnection": "Host=dpg-d0bnsouuk2gs7380p1m0-a.oregon-postgres.render.com; Port=5432; Database=adamscollegedb_0okm; Username=adamsdb; Password=annBkOWYxhVjJqaHccnG1OcNDvvFcYpi; SSL Mode=Require; Trust Server Certificate=true;"
   },
-
   "JwtSettings": {
     "Key": "Z6aP3zX7eJ9QbLsM2vT8WcKrD5YxNhF4",
     "Issuer": "YasirAuthService",
