feat:added email sending implementation

--- a/ACBackendAPI.WebApi/appsettings.json
+++ b/ACBackendAPI.WebApi/appsettings.json
@@ -26,5 +26,13 @@
     "CloudName": "dmkaocrpo",
     "ApiKey": "999333321438876",
     "ApiSecret": "pvE0xPQco252TSERy4ghkHY025k"
+  },
+
+  "MailSettings": {
+    "Mail": "yasiroyebo@gmail.com",
+    "DisplayName": "Oyebo Yasir",
+    "Password": "npxiakacdcxddruk",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
