--- a/ACBackendAPI.Domain/ACBackendAPI.Domain.csproj
+++ b/ACBackendAPI.Domain/ACBackendAPI.Domain.csproj
@@ -8,8 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
+    <PackageReference Include="FluentEmail.Core" Version="3.0.2" />
+    <PackageReference Include="FluentEmail.Razor" Version="3.0.2" />
+    <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
+    <PackageReference Include="MailKit" Version="4.12.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.4" />
+    <PackageReference Include="MimeKit" Version="4.12.0" />
   </ItemGroup>
 
 </Project>
